package iphone.Interfaces;

public interface MobilePhone {
    void call(int num);
    void answerCall();
    void voiceMail();
}
