package iphone.Interfaces;

public interface MusicPlayer {
    void play();
    void pause();
    void musicSelection(String music);
}
