package iphone.Interfaces;

public interface WebBrowser {
    void printPage(String url);
    void newTab();
    void refreshPage();
}
