package iphone.apps;

import iphone.Interfaces.WebBrowser;

public class Browser implements WebBrowser {
    @Override
    public void printPage(String url) {}

    @Override
    public void newTab() {}

    @Override
    public void refreshPage() {}
}
