package iphone.apps;

import iphone.Interfaces.MobilePhone;

public class Phone implements MobilePhone {
    @Override
    public void call(int num) {}
    
    @Override
    public void answerCall() {}
    
    @Override
    public void voiceMail() {}
}
