package iphone.apps;

import iphone.Interfaces.MusicPlayer;

public class Player implements MusicPlayer {
    @Override
    public void play() {}

    @Override    
    public void pause() {}

    @Override
    public void musicSelection(String music) {}
}
